The version number is hardcoded into sdparm.c (in a C string);
the rpm spec file: sdparm.spec ; the debian/changelog file;
and the configure.ac file (in the AC_INIT item).

ChangeLog for sdparm-1.10 [20150113] [svn: r261]
  - add --inhex=FN option for decoding with device present
  - add --pdt=PDT option for use with --inhex=FN
  - --quiet used twice hides changeable, default + saved
  - point svn:externals to rev 627 of sg3_utils
  - upgrade automake to version 1.14.1 (U14.10)

ChangeLog for sdparm-1.09 [20141226] [svn: r257]
  - decode Third Party Copy VPD page
  - Supported block lengths and protection types (sbc4r01) +
    Block device characteristics extension VPD pages added
  - zoned block device characterics VPD page added (zbc-r01c)
  - fix manufacturer-assigned serial number VPD page length
  - device id VPD: T10 vendor identification designator clean up
  - block device characteristics VPD: add ZONED (sbc4r04)
  - SAS/SPL disconnect-reconnect mpage: expand
  - SAS protocol specific port mpage: add MAXR field (spl4r01)
  - standard inquiry response (sinq): add LU_CONG
  - change ibm vendor code to lto5 and lto6
  - point svn:externals to rev 620 of sg3_utils
  - upgrade automake to version 1.14.1
  - configure: add --disable-libsgutils so build bypasses that
    library if present
  - win32: some --wscan and compile fixes

ChangeLog for sdparm-1.08 [20130606] [svn: r215]
  - device id VPD: add protocol specific port identifier
  - control extension mpage: add max sense data length
  - power condition mpage: FIDCPC->CCF_IDLE,
    FSBCPC->CCF_STAND, FSTCPC->CCF_STOPP (spc4r34+)
  - caching mpage: add SYNC_PROG field (sbc3r33)
  - block device characteristics VPD page additions sbc3r34
  - extended inquiry vpd page: add max supported sense data
    length
  - protocol-specific port information VPD page for SAS SSP,
    persistent connection (spl3r2), power disable (spl3r3)
  - allow --readonly with --set= and --clear=